--- a/nav.html
+++ b/nav.html
@@ -25,7 +25,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">登录</a>
+                    <a class="nav-link" href="login.php">登录</a>
                 </li>
             </ul>
         </div>
